[gd_scene load_steps=2 format=3 uid="uid://17pt8tvyj7xm"]

[ext_resource type="Script" uid="uid://ctarj4a5l7fve" path="res://Game/Components/Selector/selector.gd" id="1_phhgs"]

[node name="Selector" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_phhgs")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(174.47, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.235
offset_top = -20.0
offset_right = 87.235
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Timer" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
toggle_mode = true
button_pressed = true
text = "Timer"

[node name="StopWatch" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Stopwatch"

[connection signal="toggled" from="HBoxContainer/Timer" to="." method="_on_timer_toggled"]
[connection signal="toggled" from="HBoxContainer/StopWatch" to="." method="_on_stop_watch_toggled"]
